# spaceengine-mcp

./: .gitignore  CLAUDE.md  SE_MCP_Roadmap.docx.md  SE_SCRIPT_REFERENCE_FOR_CLAUDE_MD.md  SPACEENGINE_MCP_SESSION_LOG.md  capture_helper.ps1  check_console.py  check_console_scroll.py  check_console_wheel.py  check_full_log.py  check_indiv.py  check_win32.py  close_console.py  debug_menu.py  mkdocs.yml  pyproject.toml  test_cmd_direct.py  test_cmd_final.py  test_cmd_keybinds.py  test_cmd_plural.py  test_cmd_variants.py  test_comprehensive.py  test_create_se.py  test_dryrun.py  test_execute_script.py  test_full_debug.py  test_generate.py  test_individual.py  test_live.py  test_send.py
.github/workflows/: ci.yml
archive/: test_hello.py  test_more_scripts.py  test_run_se.py
docs/: CONSOLE_RULES.md  FRONTEND_ROADMAP.docx  PROJECT_STATUS.md  SE_MCP_Roadmap.docx  SE_OBJECT_NAMES.md  TEST_PLAY_GUIDE.md
docs_site/: index.md  tools.md
frontend/: electron.vite.config.ts  package-lock.json  package.json  tsconfig.json
scripts/: check_ready.py  generate_extended_catalog.py  generate_tool_docs.py  start_all.bat
src/spaceengine_mcp/: __init__.py  __main__.py  api_layer.py  config.py  errors.py  models.py  server.py
templates/: custom_system.sc.j2  flyby.se.j2  tour.se.j2
tests/: conftest.py  test_api_layer.py  test_catalog_bridge.py  test_config_bridge.py  test_console_bridge.py  test_flight_bridge.py  test_keyboard_bridge.py  test_log_bridge.py  test_phase11_workflow.py  test_script_bridge.py  test_state_bridge.py  test_tool_registration.py
tests/fixtures/: sample.sc  (+3 more)
(+56 files in other folders)
