[project]
name = "spaceengine-mcp"
version = "0.1.0"
description = "MCP Server for controlling SpaceEngine via file system bridge"
requires-python = ">=3.11"

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "jinja2>=3.0",
    "watchdog>=3.0",
    "click>=8.0",
    "pywin32>=300; sys_platform == 'win32'",
    "uvicorn>=0.27.0",
    "starlette>=0.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "httpx>=0.27.0",
    "ruff>=0.1",
]

[project.scripts]
spaceengine-mcp = "spaceengine_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spaceengine_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: requires running SpaceEngine instance",
]
